fix(UI): fix gutter overflow

--- a/src/livecodes/styles/app.scss
+++ b/src/livecodes/styles/app.scss
@@ -1274,6 +1274,7 @@ a.tools-pane-title {
   color: var(--link);
   display: flex !important;
   justify-content: center;
+  overflow: hidden;
   position: relative;
 
   &.gutter-vertical {
